--- a/rem/package.json
+++ b/rem/package.json
@@ -21,6 +21,7 @@
     "vue-template-compiler": "^2.5.16"
   },
   "dependencies": {
-    "vue": "^2.5.16"
+    "vue": "^2.5.16",
+    "vue-router": "^3.0.1"
   }
 }
