--- a/render/package.json
+++ b/render/package.json
@@ -11,7 +11,9 @@
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-plugin-external-helpers": "^6.22.0",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-3": "^6.24.1",
     "rollup-plugin-babel": "^3.0.3",
     "rollup-plugin-commonjs": "^9.1.0",
     "rollup-plugin-json": "^2.3.0",
@@ -21,8 +23,6 @@
     "vue-template-compiler": "^2.5.16"
   },
   "dependencies": {
-    "postcss-calc": "^6.0.1",
-    "postcss-cssnext": "^3.1.0",
     "vue": "^2.5.16",
     "vue-router": "^3.0.1"
   }
