--- a/demo_scroll_view/package.json
+++ b/demo_scroll_view/package.json
@@ -20,6 +20,7 @@
     "rollup-plugin-node-resolve": "^3.3.0",
     "rollup-plugin-replace": "^2.0.0",
     "rollup-plugin-vue": "^3.0.0",
+    "underscore": "^1.8.3",
     "vue-template-compiler": "^2.5.16"
   },
   "dependencies": {
