--- a/normalizr/package.json
+++ b/normalizr/package.json
@@ -1,5 +1,84 @@
 {
+  "author": "lazyTai",
+  "bugs": {
+    "url": "https://github.com/lazyTai/tai-react-ui/issues"
+  },
+  "dependencies": {
+    "lodash": "^4.17.5",
+    "lodash.union": "^4.6.0",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "react-loadable": "^5.3.1",
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.2.2",
+    "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0"
+  },
   "devDependencies": {
-    "normalizr": "^3.2.4"
+    "autoprefixer": "^8.2.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.4",
+    "babel-plugin-external-helpers": "^6.22.0",
+    "babel-plugin-import": "^1.6.7",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "better-webpack-progress": "^1.0.1",
+    "clean-webpack-plugin": "^0.1.19",
+    "cors": "^2.8.4",
+    "css-loader": "^0.28.11",
+    "esdoc": "^1.0.4",
+    "esdoc-ecmascript-proposal-plugin": "^1.0.0",
+    "esdoc-jsx-plugin": "^1.0.0",
+    "esdoc-publish-markdown-plugin": "^1.0.0",
+    "esdoc-react-plugin": "^1.0.1",
+    "esdoc-standard-plugin": "^1.0.0",
+    "express": "^4.16.3",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "html-webpack-plugin": "^3.1.0",
+    "http-proxy-middleware": "^0.18.0",
+    "less": "^3.0.1",
+    "less-loader": "^4.1.0",
+    "lodash.merge": "^4.6.1",
+    "normalizr": "^3.2.4",
+    "postcss-import": "^11.1.0",
+    "postcss-loader": "^2.1.3",
+    "postcss-modules": "^1.1.0",
+    "postcss-nested-import": "^0.1.0",
+    "postcss-utils": "^1.0.2",
+    "precss": "^3.1.2",
+    "process.args": "^0.0.6",
+    "prop-types": "^15.6.1",
+    "react-dev-utils": "^5.0.1",
+    "react-error-overlay": "^4.0.0",
+    "react-transition-group": "^2.3.0",
+    "style-loader": "^0.20.3",
+    "url-loader": "^1.0.1",
+    "vue-template-compiler": "^2.5.16",
+    "webpack": "^3.10.0",
+    "webpack-bundle-analyzer": "^2.11.1",
+    "webpack-dev-middleware": "^2.0.6",
+    "webpack-hot-middleware": "^2.21.2",
+    "webpack-visualizer-plugin": "^0.1.11",
+    "write-file-webpack-plugin": "^4.2.0"
+  },
+  "license": "ISC",
+  "main": "index.js",
+  "name": "dingyi",
+  "scripts": {
+    "build": "set NODE_ENV=build&&node ./build/build.js --domain=http://localhost:5000",
+    "dev": "set NODE_ENV=dev&&node ./build/server.dev.js",
+    "dev_end": "set NODE_ENV=dev&&node ./build/server.dev.js --domain=http://192.168.8.194:8080 ",
+    "test": "set NODE_ENV=test&&jest",
+    "doc": "nodemon ./build/doc.js"
+  },
+  "version": "1.0.0",
+  "jest": {
+    "transform": {
+      "^.+\\.jsx$": "babel-jest",
+      "^.+\\.js$": "babel-jest"
+    }
   }
 }
