--- a/webpack4/package.json
+++ b/webpack4/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node ./build/webpack.dev.js",
-    "dev": "node ./build/server.dev.js"
+    "dev": "node ./build/dev.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "html-webpack-plugin": "^3.2.0",
+    "webpack": "^4.8.1"
   }
 }
