--- a/webpack4/package.json
+++ b/webpack4/package.json
@@ -4,13 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "node ./build/dev.js"
+    "dev": "node ./build/dev.js --domain=http://192.168.8.194:8080"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "express": "^4.16.3",
     "html-webpack-plugin": "^3.2.0",
-    "webpack": "^4.8.1"
+    "webpack": "^4.8.1",
+    "yargs": "^11.0.0"
   }
 }
