--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 .idea
+.vscode
 composer.lock
 *.log
 thinkphp
@@ -9,3 +10,5 @@ node_modules/
 /runtime
 runtime/
 /runtime/
+./dist/stats.html
+dist/stats.html
